--- a/css/source/main.scss
+++ b/css/source/main.scss
@@ -1,8 +1,8 @@
-// general scss files
+// framework
 @import 'prefixes';
 @import 'functions';
 @import 'icons';
 
-// custom scss files
+// custom styles
 @import 'reset';
 @import 'general';
