--- a/css/source/general.scss
+++ b/css/source/general.scss
@@ -65,7 +65,7 @@ main {
 }
 
 nav {
-    position: fixed; top: 0; left: 0; z-index: 9999;
+    position: fixed; top: 0; left: 0; z-index: 9998;
     width: 100%; height: 100%;
     overflow: hidden;
     @include transition(all 0s);
@@ -73,7 +73,7 @@ nav {
     .overlay {
         position: absolute; top: 0; left: 0; z-index: 1;
         width: 100%; height: 100%;
-        background-color: black; opacity: .4;
+        background-color: #ffffff; opacity: .65;
         @include transition(opacity .7s);
     }
     
@@ -89,62 +89,69 @@ nav {
         
         &.red,
         &.blue,
-        &.orange {
+        &.orange,
+        &.green {
             background-color: #1d1d21;
+        }
+        
+        &.r1,
+        &.r3,
+        &.r6,
+        &.r8 {
+            @include transition-delay(.05s, .7s);
+        }
+        
+        &.r2,
+        &.r4,
+        &.r7,
+        &.r9 {
+            @include transition-delay(.1s, .75s);
         }
         
         &.r1 {
             top: 0; left: 0;
             width: 24%; height: 28%;
-            @include transition-delay(.05s, .7s);
         }
         
         &.r2 {
             top: 28%; left: 0;
-            width: 24%; height: 12%;
-            @include transition-delay(.1s, .74s);
+            width: 70%; height: 12%;
         }
         
         &.r3 {
             top: 0; left: 24%;
-            width: 46%; height: 40%;
-            @include transition-delay(.15s, .78s);
+            width: 46%; height: 28%;
         }
         
         &.r4 {
             top: 0; left: 70%;
             width: 30%; height: 23%;
-            @include transition-delay(.2s, .82s);
         }
         
         &.r5 {
             top: 23%; left: 70%;
             width: 30%; height: 17%;
-            @include transition-delay(.25s, .86s);
+            @include transition-delay(.15s, .78s);
         }
         
         &.r6 {
             top: 40%; left: 0;
             width: 70%; height: 40%;
-            @include transition-delay(.3s, .9s);
         }
         
         &.r7 {
             top: 40%; left: 70%;
             width: 30%; height: 40%;
-            @include transition-delay(.35s, .94s);
         }
         
         &.r8 {
             top: 80%; left: 0;
             width: 15%; height: 20%;
-            @include transition-delay(.4s, .98s);
         }
         
         &.r9 {
             top: 80%; left: 15%;
             width: 85%; height: 20%;
-            @include transition-delay(.45s, 1.02s);
         }
     }
     
@@ -152,7 +159,7 @@ nav {
         top: -5px;
         width: 0; height: 0;
         visibility: hidden; opacity: 0;
-        @include transition(all 0s .7s);
+        @include transition(all 0s .3s);
         
         .overlay {
             opacity: 0;
@@ -160,20 +167,119 @@ nav {
     
         .rect {
             opacity: 0;
-            @include transform(translate(-9%, -9%) scale(.85));
-            @include transition-duration(.2s);
+            @include transition(all .25s);
+            
+            &.r1,
+            &.r2 {
+                @include transform(translate(-9%, -9%) scale(.85));
+            }
+            
+            &.r3,
+            &.r4,
+            &.r5 {
+                @include transform(translate(9%, -9%) scale(.85));
+            }
+            
+            &.r6,
+            &.r7 {
+                @include transform(translate(-9%, 9%) scale(.85));
+            }
+            
+            &.r8,
+            &.r9 {
+                @include transform(translate(9%, 9%) scale(.85));
+            }
 
             &.red {
-                background-color: #b71a49;
+                background-color: $bauhaus-red;
             }
             
             &.blue {
-                background-color: #00638d;
+                background-color: $bauhaus-blue;
             }
         
             &.orange {
-                background-color: #f39100;
+                background-color: $bauhaus-orange;
+            }
+        
+            &.green {
+                background-color: $bauhaus-green;
             }
         }
+    }
+}
+
+#nav-btn {
+    position: fixed; top: 0; right: 0; z-index: 9999;
+    width: 80px; height: 80px; padding: 15px;
+    background-color: white;
+    
+    &:active {
+        @include transform(scale(.9));
+        @include transition(.1s);
+    }
+    
+    b {
+        display: block; position: relative;
+        width: 100%; height: 100%;
+    }
+    
+    i {
+        position: absolute; left: 0;
+        width: 100%; height: 13%; // 16% gaps between i's
+        @include transition(all .2s, width .2s .2s, top .2s .2s, left .2s .2s);
+        
+        &:nth-child(1) {
+            top: 0; z-index: 3;
+            background-color: $bauhaus-red;
+        }
+        &:nth-child(2) {
+            top: 29%; z-index: 1;
+            background-color: $bauhaus-blue;
+        }
+        &:nth-child(3) {
+            top: 58%; z-index: 2;
+            background-color: $bauhaus-orange;
+        }
+        &:nth-child(4) {
+            top: 87%; z-index: 4;
+            background-color: $bauhaus-green;
+        }
+    }
+    
+    &.nav-visible {
+        
+        i {
+            top: 43.5%;
+            width: 40%;
+            @include transition(all .5s .3s, width .2s .1s, top .2s .1s, left .2s .1s);
+            
+            &:nth-child(1),
+            &:nth-child(3) {
+                left: 10%;
+                @include transform-origin(right center);
+            }
+            
+            &:nth-child(2),
+            &:nth-child(4) {
+                left: 50%;
+                @include transform-origin(left center);
+            }
+        
+            &:nth-child(1) {
+                @include transform(rotate(45deg));
+            }
+            &:nth-child(2) {
+                @include transform(rotate(-45deg));
+            }
+            &:nth-child(3) {
+                @include transform(rotate(-45deg));
+            }
+            &:nth-child(4) {
+                @include transform(rotate(45deg));
+            }
+            
+        }
+        
     }
 }
