--- a/css/source/general.scss
+++ b/css/source/general.scss
@@ -77,35 +77,38 @@ nav {
         @include transition(opacity .7s);
     }
     
-    .background {
+    .container {
         position: absolute; top: 50%; left: 50%; z-index: 2;
-        max-width: 500px; width: 100%; max-height: 800px; height: 100%;
+        max-width: 400px; width: 100%; max-height: 600px; height: 100%; padding: 15px;
         @include transform(translate(-50%, -50%));
+        
+        @media (max-width: 570px), (max-height: 700px) {
+            max-width: none; max-height: none;
+            padding: 10px;
+        }
+    }
+    
+    .content {
+        position: relative; z-index: 4;
+        width: 100%; height: 100%;
+        background-color: white;
     }
     
     .rect {
         position: absolute; z-index: 3;
-        @include transition(all .4s, background-color .4s);
+        @include transition(all .4s);
         
-        &.red,
-        &.blue,
-        &.orange,
-        &.green {
-            background-color: #1d1d21;
+        &.red       {background-color: $bauhaus-red;}
+        &.blue      {background-color: $bauhaus-blue;}
+        &.orange    {background-color: $bauhaus-orange;}
+        &.green     {background-color: $bauhaus-green;}
+        
+        &.r1, &.r3, &.r5, &.r6, &.r8 {
+            @include transition-delay(.05s);
         }
         
-        &.r1,
-        &.r3,
-        &.r6,
-        &.r8 {
-            @include transition-delay(.05s, .7s);
-        }
-        
-        &.r2,
-        &.r4,
-        &.r7,
-        &.r9 {
-            @include transition-delay(.1s, .75s);
+        &.r2, &.r4, &.r7, &.r9 {
+            @include transition-delay(.1s);
         }
         
         &.r1 {
@@ -131,7 +134,6 @@ nav {
         &.r5 {
             top: 23%; left: 70%;
             width: 30%; height: 17%;
-            @include transition-delay(.15s, .78s);
         }
         
         &.r6 {
@@ -169,41 +171,20 @@ nav {
             opacity: 0;
             @include transition(all .25s);
             
-            &.r1,
-            &.r2 {
+            &.r1, &.r2 {
                 @include transform(translate(-9%, -9%) scale(.85));
             }
             
-            &.r3,
-            &.r4,
-            &.r5 {
+            &.r3, &.r4, &.r5 {
                 @include transform(translate(9%, -9%) scale(.85));
             }
             
-            &.r6,
-            &.r7 {
+            &.r6, &.r7 {
                 @include transform(translate(-9%, 9%) scale(.85));
             }
             
-            &.r8,
-            &.r9 {
+            &.r8, &.r9 {
                 @include transform(translate(9%, 9%) scale(.85));
-            }
-
-            &.red {
-                background-color: $bauhaus-red;
-            }
-            
-            &.blue {
-                background-color: $bauhaus-blue;
-            }
-        
-            &.orange {
-                background-color: $bauhaus-orange;
-            }
-        
-            &.green {
-                background-color: $bauhaus-green;
             }
         }
     }
@@ -214,8 +195,8 @@ nav {
     width: 80px; height: 80px; padding: 15px;
     background-color: white;
     
-    &:active {
-        @include transform(scale(.9));
+    &:active b {
+        @include transform(scale(.9) rotate(-4deg));
         @include transition(.1s);
     }
     
@@ -229,19 +210,19 @@ nav {
         width: 100%; height: 13%; // 16% gaps between i's
         @include transition(all .2s, width .2s .2s, top .2s .2s, left .2s .2s);
         
-        &:nth-child(1) {
+        &.i1 {
             top: 0; z-index: 3;
             background-color: $bauhaus-red;
         }
-        &:nth-child(2) {
+        &.i2 {
             top: 29%; z-index: 1;
             background-color: $bauhaus-blue;
         }
-        &:nth-child(3) {
+        &.i3 {
             top: 58%; z-index: 2;
             background-color: $bauhaus-orange;
         }
-        &:nth-child(4) {
+        &.i4 {
             top: 87%; z-index: 4;
             background-color: $bauhaus-green;
         }
@@ -254,28 +235,28 @@ nav {
             width: 40%;
             @include transition(all .5s .3s, width .2s .1s, top .2s .1s, left .2s .1s);
             
-            &:nth-child(1),
-            &:nth-child(3) {
+            &.i1,
+            &.i3 {
                 left: 10%;
                 @include transform-origin(right center);
             }
             
-            &:nth-child(2),
-            &:nth-child(4) {
+            &.i2,
+            &.i4 {
                 left: 50%;
                 @include transform-origin(left center);
             }
         
-            &:nth-child(1) {
+            &.i1 {
                 @include transform(rotate(45deg));
             }
-            &:nth-child(2) {
+            &.i2 {
                 @include transform(rotate(-45deg));
             }
-            &:nth-child(3) {
+            &.i3 {
                 @include transform(rotate(-45deg));
             }
-            &:nth-child(4) {
+            &.i4 {
                 @include transform(rotate(45deg));
             }
             
