--- a/css/source/general.scss
+++ b/css/source/general.scss
@@ -128,12 +128,12 @@ nav {
         
         &.r4 {
             top: 0; left: 70%;
-            width: 30%; height: 23%;
+            width: 30%; height: 17%;
         }
         
         &.r5 {
-            top: 23%; left: 70%;
-            width: 30%; height: 17%;
+            top: 17%; left: 70%;
+            width: 30%; height: 23%;
         }
         
         &.r6 {
@@ -196,7 +196,7 @@ nav {
     background-color: white;
     
     &:active b {
-        @include transform(scale(.9) rotate(-4deg));
+        @include transform(scale(.9));
         @include transition(.1s);
     }
     
