--- a/css/source/general.scss
+++ b/css/source/general.scss
@@ -1,3 +1,21 @@
+// font
+
+@font-face {
+    font-family: 'Ubunutu';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Ubuntu Regular'), 
+         local('Ubuntu-Regular'), 
+         url('../font/ubuntu.woff2') format('woff2'),
+         url('../font/ubuntu.woff') format('woff'),
+         url('../font/ubuntu.eot') format('embedded-opentype'),
+         url('../font/ubuntu.ttf') format('truetype');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+
+
 // custom scrollbar in webkit browsers
 
 ::-webkit-scrollbar {
@@ -36,21 +54,8 @@ html {
     
     min-height: 100%;
     background: #ffffff;
-    font-family: 'Arial sans-serif'; color: #484848;
+    font-family: 'Ubunutu', 'Arial', sans-serif; color: #484848;
     @include user-select(none);
-}
-
-a {
-    color: #6f6f6f; font-style: normal; text-decoration: underline;
-    
-    &:focus,
-    &:hover {
-        background: #ebebeb;
-    }
-    
-    &:focus {
-        @include tab-effect;
-    }
 }
 
 body {
@@ -92,7 +97,47 @@ nav {
         position: relative; z-index: 4;
         width: 100%; height: 100%;
         background-color: white; opacity: 1;
+        text-align: center;
         @include transition(.2s);
+        
+        .center {
+            display: table; position: relative; top: 50%; left: 50%;
+            @include transform(translate(-50%, -50%));
+        }
+        
+        a {
+            display: inline-block; position: relative;
+            margin: 5px; padding: 16px 26px;
+            overflow: hidden; border: 3px solid currentColor;
+            color: white; text-decoration: none; font-size: 28px; line-height: 1em; font-weight: 700;
+            
+            &:after,
+            &:before {
+                content: '';
+                display: block; position: absolute; top: 0; left: 0; z-index: -1;
+                width: 100%; height: 100%;
+                background-color: white;
+                @include transition(.2s);
+            }
+            
+            &:after {
+                top: -100%;
+            }
+            
+            &:hover {
+                &:after,
+                &:before {
+                    @include transform(translate(0, 100%));
+                }
+            }
+            
+            &.l1:before {background-color: $bauhaus-red;}
+            &.l2:before {background-color: $bauhaus-blue;}
+            &.l3:before {background-color: $bauhaus-orange;}
+            &.l1:hover {color: $bauhaus-red;}
+            &.l2:hover {color: $bauhaus-blue;}
+            &.l3:hover {color: $bauhaus-orange;}
+        }
     }
     
     .rect {
