--- a/css/source/general.scss
+++ b/css/source/general.scss
@@ -33,6 +33,22 @@
 
 
 
+// simple animations
+
+@include keyframes(fade-in) {
+    0% {opacity: 0;}
+}
+
+@include keyframes(fade-out) {
+    100% {opacity: 0;}
+}
+
+@include keyframes(hidden) {
+    0%, 100% {visibility: hidden; pointer-events: none; opacity: 0;}
+}
+
+
+
 // general elements
 
 *,
@@ -108,27 +124,19 @@ nav {
         a {
             display: inline-block; position: relative;
             margin: 5px; padding: 16px 26px;
-            overflow: hidden; border: 3px solid currentColor;
+            overflow: hidden;
             color: white; text-decoration: none; font-size: 28px; line-height: 1em; font-weight: 700;
             
-            &:after,
             &:before {
                 content: '';
                 display: block; position: absolute; top: 0; left: 0; z-index: -1;
                 width: 100%; height: 100%;
                 background-color: white;
-                @include transition(.2s);
+                @include transition(.3s);
             }
             
-            &:after {
-                top: -100%;
-            }
-            
-            &:hover {
-                &:after,
-                &:before {
-                    @include transform(translate(0, 100%));
-                }
+            &:hover:before {
+                @include transform(translate(100%));
             }
             
             &.l1:before {background-color: $bauhaus-red;}
@@ -138,6 +146,12 @@ nav {
             &.l2:hover {color: $bauhaus-blue;}
             &.l3:hover {color: $bauhaus-orange;}
         }
+    }
+            
+    &:not(.hidden) .content a {
+        &:before    {@include animation(nav-a-appear .2s .35s, hidden .35s);}
+        &.l2:before {@include animation(nav-a-appear .3s .5s, hidden .5s);}
+        &.l3:before {@include animation(nav-a-appear .4s .65s, hidden .65s);}
     }
     
     .rect {
@@ -188,13 +202,13 @@ nav {
         }
         
         &.r7 {
-            top: 40%; left: 70%;
-            width: 30%; height: 40%;
+            top: 80%; left: 0;
+            width: 15%; height: 20%;
         }
         
         &.r8 {
-            top: 80%; left: 0;
-            width: 15%; height: 20%;
+            top: 40%; left: 70%;
+            width: 30%; height: 40%;
         }
         
         &.r9 {
@@ -221,23 +235,16 @@ nav {
             opacity: 0;
             @include transition(all .25s);
             
-            &.r1, &.r2 {
-                @include transform(translate(-9%, -9%) scale(.85));
-            }
-            
-            &.r3, &.r4, &.r5 {
-                @include transform(translate(9%, -9%) scale(.85));
-            }
-            
-            &.r6, &.r7 {
-                @include transform(translate(-9%, 9%) scale(.85));
-            }
-            
-            &.r8, &.r9 {
-                @include transform(translate(9%, 9%) scale(.85));
-            }
+            &.r1, &.r2          {@include transform(translate(-14%, -14%) scale(.85));}
+            &.r3, &.r4, &.r5    {@include transform(translate(14%, -14%)  scale(.85));}
+            &.r6, &.r7          {@include transform(translate(-14%, 14%)  scale(.85));}
+            &.r8, &.r9          {@include transform(translate(14%, 14%)   scale(.85));}
         }
     }
+}
+
+@include keyframes(nav-a-appear) {
+    0% {width: 0;}
 }
 
 #nav-btn {
@@ -297,18 +304,10 @@ nav {
                 @include transform-origin(left center);
             }
         
-            &.i1 {
-                @include transform(rotate(45deg));
-            }
-            &.i2 {
-                @include transform(rotate(-45deg));
-            }
-            &.i3 {
-                @include transform(rotate(-45deg));
-            }
-            &.i4 {
-                @include transform(rotate(45deg));
-            }
+            &.i1 {@include transform(rotate(45deg));}
+            &.i2 {@include transform(rotate(-45deg));}
+            &.i3 {@include transform(rotate(-45deg));}
+            &.i4 {@include transform(rotate(45deg));}
             
         }
         
