--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -198,6 +198,7 @@ nav {
     i {
         position: absolute; left: -20%; z-index: 1;
         width: 120%; height: 16%; // three 12% gaps between i's
+        @include border-radius(3px);
         @include transition(all .2s, width .2s .2s, top .2s .2s, left .2s .2s);
         
         &.i1 {
@@ -242,5 +243,69 @@ nav {
             
         }
         
+    }
+}
+
+#to-top {
+    position: fixed; bottom: 15px; right: 15px;
+    width: 48px; height: 48px;
+    
+    b {
+        display: block; position: absolute; top: 22%; left: 25%; z-index: 2;
+        width: 56%; height: 56%;
+        @include transition(.2s);
+    }
+    
+    i {
+        position: absolute; top: 0; left: 40%; z-index: 1;
+        width: 15%;
+        background-color: white;
+        @include border-radius(4px);
+        
+        &.bar {
+            height: 100%;
+        }
+        
+        &.head1, &.head2 {
+            height: 60%;
+            @include transform-origin(top center);
+            @include transition(.2s);
+        }
+        
+        &.head1 {@include transform(rotate(-45deg) translate(0,-8%));}
+        &.head2 {@include transform(rotate(45deg) translate(0,-8%));}
+    }
+    
+    // background
+    &:after {
+        content: '';
+        display: block; position: absolute; top: 0; left: 0; z-index: 1;
+        width: 100%; height: 100%;
+        background-color: $bauhaus-red;
+        @include border-radius(4px);
+        @include transition(.15s);
+    }
+    
+    &:hover {
+        
+        b {
+            top: 15%;
+        }
+        
+        &:after {
+            top: -12%;
+        }
+        
+        i {
+            &.head1 {@include transform(rotate(-36deg) translate(0,-10%));}
+            &.head2 {@include transform(rotate(36deg) translate(0,-10%));}
+        }
+    }
+    
+    &:active {
+        
+        b {
+            @include transform(scale(.8));
+        }
     }
 }
