--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -229,8 +229,8 @@ nav {
 }
 
 #hamburger-btn {
-    position: fixed; top: 0; right: 0; z-index: 9999;
-    width: 70px; height: 70px; padding: 15px;
+    position: fixed; top: 15px; right: 15px; z-index: 9999;
+    width: 40px; height: 40px;
     @include transition(.1s);
     
     @include on-desktop{display: none;}
@@ -372,11 +372,51 @@ nav {
             @include transition-delay(.275s);
             
             .cross {
-                position: absolute; top: 15px; right: 15px;
+                position: absolute; top: 15px; right: 15px; z-index: 2;
                 
                 @include on-mobile {
                     left: 15px; right: auto;
                 }
+            }
+            
+            .center {
+                display: inline-block; position: absolute; top: 50%; left: 50%; z-index: 1;
+                max-width: 300px; width: 100%; padding: 15px;
+                @include transform(translate(-50%,-50%));
+            }
+            
+            a {
+                display: inline-block; position: relative;
+                width: 100%; height: 60px; margin: 6px 0; padding: 15px 15px 15px 90px;
+                color: #747474; font-size: 18px; line-height: 30px; text-decoration: none;
+                @include text-wrap;
+                @include border-radius(5px);
+                @include transition(.2s);
+                
+                &.current {
+                    background: #f8f8f8; cursor: auto;
+                }
+                
+                &:not(.current):hover {
+                    background-color: rgba(0,0,0,.1);
+                }
+                
+                span {
+                    font-size: .7em;
+                    @include opacity(.7);
+                }
+                
+                &:before {
+                    content: '';
+                    display: block; position: absolute; top: 15px; left: 15px;
+                    width: 50px; height: 30px;
+                    border: 1px solid #bebebe; background-repeat: no-repeat;
+                    @include background-size(100% 100%);
+                    @include border-radius(3px);
+                }
+                    
+                &.en:before {@extend %flag-usa;}
+                &.de:before {@extend %flag-germany;}
             }
         }
     }
@@ -429,7 +469,10 @@ nav {
     }
     
     &:active {
-        @include transform(scale(.8));
+        &:before, &:after {
+            left: 10%;
+            width: 80%;
+        }
     }
 }
 
