added nav-bar; made mobile nav animation the same as language menu

--- a/css/source/main.scss
+++ b/css/source/main.scss
@@ -1,7 +1,7 @@
 // framework
 @import 'prefixes';
 @import 'functions';
-@import 'colors';
+@import 'values';
 @import 'icons';
 
 // reset browser styles
