--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -86,7 +86,7 @@ html {
 
 body {
     position: relative;
-    max-width: 1280px; min-height: 100%; margin: 0 auto;
+    max-width: $max-width; min-height: 100%; margin: 0 auto; padding: 100px 0;
     overflow-x: hidden;
     font-size: 0;
 }
