--- a/css/source/bauhaus.scss
+++ b/css/source/bauhaus.scss
@@ -3,84 +3,86 @@
     text-align: center;
     
     .rects {
-        display: inline-block; position: relative; 
-        max-width: 400px; width: 100%; padding: 14px;
+        display: inline-block; position: relative;
+        max-width: 400px; width: 100%; height: 100%;
     
         > * {
             display: block; position: absolute; z-index: 3;
-            @include transition(.4s);
         }
         
-        .red       {background-color: $bauhaus-red;}
-        .blue      {background-color: $bauhaus-blue;}
-        .orange    {background-color: $bauhaus-orange;}
-        .green     {background-color: $bauhaus-green;}
-        
-        .r1, .r3, .r5, .r6, .r8 {
-            @include transition-delay(.15s);
+        .red, .blue, .orange, .green {
+            background-color: #2f2f2f;
         }
         
-        .r2, .r4, .r7, .r9 {
-            @include transition-delay(.25s);
-        }
-        
-        @mixin rect($top, $left, $width, $height) {
+        @mixin rect($top, $left, $width, $height, $delay) {
             top: $top; left: $left;
             width: $width; height: $height;
+            @include transition(.4s ($delay * 1.4), background-color .6s (1.3s + ($delay / 2)));
         }
         
-        .r1 {@include rect(  0,   0, 24%, 28%);}
-        .r2 {@include rect(28%,   0, 70%, 12%);}
-        .r3 {@include rect(  0, 24%, 46%, 28%);}
-        .r4 {@include rect(  0, 70%, 30%, 17%);}
-        .r5 {@include rect(17%, 70%, 30%, 23%);}
-        .r6 {@include rect(40%,   0, 70%, 40%);}
-        .r7 {@include rect(80%,   0, 15%, 20%);}
-        .r8 {@include rect(40%, 70%, 30%, 40%);}
-        .r9 {@include rect(80%, 15%, 85%, 20%);}
+        .r1 {@include rect(  0,   0, 24%, 40%, .075s);}
+        .r2 {@include rect(  0, 24%, 46%, 40%, .15s);}
+        .r3 {@include rect(  0, 70%, 30%, 25%, .225s);}
+        .r4 {@include rect(40%,   0, 70%, 40%, .3s);}
+        .r5 {@include rect(80%,   0, 35%, 20%, .375s);}
+        .r6 {@include rect(25%, 70%, 30%, 65%, .45s);}
+        .r7 {@include rect(80%, 35%, 65%, 20%, .525s);}
+    }
         
-        .r10 {
-            position: relative; z-index: 4;
-            width: 100%; height: auto; padding: 35px;
-            background-color: white;
-            font-style: normal;
-            @include border-radius(4px);
-            
-            > *:first-child {
-                margin-top: 0;
-            }
-            
-            > *:last-child {
-                margin-bottom: 0;
-            }
-            
-            p {
-                text-align: center;
-                text-align: justify;
-            }
+    .content {
+        display: inline-block; position: relative; z-index: 4;
+        max-width: 400px; width: 100%; height: auto; padding: 50px;
+        font-style: normal;
+
+        * {
+            color: white;
+        }
+
+        > *:first-child {
+            margin-top: 0;
+            @include transition(.6s 2s);
+        }
+
+        > *:nth-child(2) {
+            @include transition(.8s 2.2s);
+        }
+
+        > *:nth-child(3) {
+            @include transition(1s 2.4s);
+        }
+
+        > *:nth-child(4) {
+            margin-bottom: 0;
+            @include transition(1.2s 2.6s);
+        }
+
+        p {
+            text-align: center;
+            text-align: justify;
         }
     }
         
     &.hidden {
         visibility: hidden; 
         @include opacity(0);
-        @include transition(all 0s .3s);
+        @include transition(all 0s .35s);
 
-        .overlay, .rects *, .content {
+        .rects > * {
             @include opacity(0);
+            @include transition(.3s);
         }
 
-        .content {
-            @include transition(.2s);
-        }
+        .rects > *:not(.content) {
+            @include transform(translate(-18%, -18%) scale(.85));
 
-        .rects {
-            *               {@include transition(all .25s);}
-            .r1, .r2        {@include transform(translate(-18%, -18%) scale(.85));}
-            .r3, .r4, .r5   {@include transform(translate(18%, -18%)  scale(.85));}
-            .r6, .r7        {@include transform(translate(-18%, 18%)  scale(.85));}
-            .r8, .r9        {@include transform(translate(18%, 18%)   scale(.85));}
-            .r10            {@include opacity(0);}
+            &.red       {background-color: $bauhaus-red;}
+            &.blue      {background-color: $bauhaus-blue;}
+            &.orange    {background-color: $bauhaus-orange;}
+            &.green     {background-color: $bauhaus-green;}
+        }
+        
+        .content > * {
+            @include transform(translate(0, 15px));
         }
     }
 }
