--- a/css/source/bauhaus.scss
+++ b/css/source/bauhaus.scss
@@ -4,7 +4,7 @@
     
     .rects {
         display: inline-block; position: relative;
-        max-width: 400px; width: 100%; height: 100%;
+        max-width: 400px; width: 100%;
     
         > * {
             display: block; position: absolute; z-index: 3;
