added basic projects section; added technologies nav button

--- a/css/source/reset.scss
+++ b/css/source/reset.scss
@@ -109,17 +109,17 @@ button {
 // text formatting elements
 
 h1 {
-    font-size: 28px; line-height: 1.3em;
+    font-size: 40px; line-height: 1.3em;
 }
 
 h2 {
     margin: 45px 0 0 0;
-    font-size: 22px; line-height: 1.3em;
+    font-size: 30px; line-height: 1.3em;
 }
 
 p {
     margin: 18px 0;
-    font-size: 14px; line-height: 20px; color: #3b3b3b;
+    font-size: 14px; line-height: 20px;
 }
 
 b {
