--- a/css/source/bauhaus.scss
+++ b/css/source/bauhaus.scss
@@ -44,25 +44,33 @@
 
         > *:first-child {
             margin-top: 0;
-            @include transition(.6s 2s);
+            @include transition(1s 2s);
         }
 
         > *:nth-child(2) {
-            @include transition(.8s 2.3s);
+            @include transition(1.2s 2.3s);
         }
 
         > *:nth-child(3) {
-            @include transition(1s 2.7s);
+            @include transition(1.4s 2.7s);
         }
 
         > *:nth-child(4) {
             margin-bottom: 0;
-            @include transition(1.2s 3.2s);
+            @include transition(1.6s 3.2s);
         }
 
         p {
             text-align: center;
             text-align: justify;
+        }
+        
+        a {
+            @include transition(.2s);
+        }
+        
+        a:hover {
+            color: #cecece;
         }
     }
         
@@ -77,7 +85,7 @@
         }
 
         .rects > *:not(.content) {
-            @include transform(translate(-18%, -18%) scale(.85));
+            @include transform(translate(-18%, -18%) scale(.6));
 
             &.red       {background-color: $bauhaus-red;}
             &.blue      {background-color: $bauhaus-blue;}
