--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -79,9 +79,8 @@ html {
     scroll-behavior:                smooth;                 // prevent instant scroll, enable smooth movement
     
     min-height: 100%;
-    background: #ffffff;
+    background: #f9f9f9;
     font-family: 'Ubunutu', 'Arial', sans-serif; color: #484848;
-    @include user-select(none);
 }
 
 body {
@@ -93,4 +92,9 @@ body {
 
 main {
     max-width: 1100px; width: 100%; margin: 0 auto; padding: 0 20px 20px 20px;
+}
+
+hr {
+    margin: 50px 0;
+    border: dashed #e8e8e8; border-width: 3px 0 0 0;
 }
