--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -91,10 +91,27 @@ body {
 }
 
 main {
-    max-width: 1100px; width: 100%; margin: 0 auto; padding: 0 20px 20px 20px;
+    max-width: $max-width; width: 100%; margin: 0 auto; padding: 0 20px 20px 20px;
 }
 
 hr {
     margin: 50px 0;
     border: dashed #e8e8e8; border-width: 3px 0 0 0;
+}
+
+h2 {
+    display: inline-block;
+    margin: 0 0 30px 0; padding: 8px;
+    border: solid currentColor; border-width: 3px;
+    @include border-radius(5px);
+    
+    &.red    {color: $bauhaus-red;}
+    &.blue   {color: $bauhaus-blue;}
+    &.orange {color: $bauhaus-orange;}
+    &.green  {color: $bauhaus-green;}
+}
+
+.anchor-link {
+    display: block;
+    width: 1px; height: 1px;
 }
