--- a/css/source/intro.scss
+++ b/css/source/intro.scss
@@ -1,6 +1,6 @@
 #intro {
     position: relative;
-    min-height: 600px; height: 90vh; padding: 15px;
+    min-height: 600px; height: 90vh;
     
     &:before {
         content: '';
