--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -146,7 +146,7 @@
         
         .center {
             position: relative; top: auto; left: auto;
-            max-width: none; widows: auto; padding: 0;
+            max-width: none; width: auto; padding: 0;
             text-align: inherit;
         }
     }
@@ -161,32 +161,16 @@
         }
         
         a {
-            display: inline-block; position: relative; z-index: 2;
+            display: inline-block;
             margin: 5px; padding: 16px 26px;
             overflow: hidden;
             color: white; text-decoration: none; font-size: 28px; line-height: 1em; font-weight: 700;
             @include border-radius(4px);
             
-            &:before {
-                content: '';
-                display: block; position: absolute; top: 0; left: 0; z-index: -1;
-                width: 100%; height: 100%;
-                background-color: white;
-                @include transition(.3s);
-            }
-            
-            &:hover:before {
-                @include transform(translate(100%));
-            }
-            
-            &.a1:before {background-color: $bauhaus-red;}
-            &.a1:hover  {color:            $bauhaus-red;}
-            &.a2:before {background-color: $bauhaus-blue;}
-            &.a2:hover  {color:            $bauhaus-blue;}
-            &.a3:before {background-color: $bauhaus-green;}
-            &.a3:hover  {color:            $bauhaus-green;}
-            &.a4:before {background-color: $bauhaus-orange;}
-            &.a4:hover  {color:            $bauhaus-orange;}
+            &.a1 {background-color: $bauhaus-red;}
+            &.a2 {background-color: $bauhaus-blue;}
+            &.a3 {background-color: $bauhaus-green;}
+            &.a4 {background-color: $bauhaus-orange;}
         }
         
         @include on-desktop {
@@ -206,6 +190,7 @@
                 &.a4.active, &.a4:hover {color: $bauhaus-orange;}
                 
                 &.a1, &.a2, &.a3, &.a4 {
+                    background: none;
                     color: #676d86;
                 
                     &:before, 
