--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -384,7 +384,7 @@
         max-width: 400px;
     }
     
-    .content a {
+    .lang-select-btn {
         display: inline-block; position: relative;
         width: 100%; margin: 6px 0; padding: 25px 25px 25px 128px;
         color: #747474; font-size: 30px; line-height: 1em; text-decoration: none;
