--- a/css/source/projects.scss
+++ b/css/source/projects.scss
@@ -1,9 +1,15 @@
 .project {
     display: inline-block; position: relative;
     overflow: hidden;
-    border: 1px solid #efefef;
     @include border-radius(5px);
     @include background-size(cover);
+    @include box-shadow(
+        0 1px 1px rgba(0,0,0,.1),
+        0 2px 2px rgba(0,0,0,.1),
+        0 4px 4px rgba(0,0,0,.1),
+        0 8px 8px rgba(0,0,0,.1),
+        0 16px 16px rgba(0,0,0,.1)
+    );
     
     @mixin project-btn-size($parts) {
         $size: 96% / $parts;
